Revert one more version back: undoing layout collapse fix

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1200,6 +1200,7 @@ video {
   .km-pcarousel__image,
   .km-pcarousel__img {
     height: 145px !important;
+    width: 100% !important;
     object-fit: cover !important;
   }
 
